# ferro-sentry

./: .gitignore  CONTEXT_PASSING.md  Cargo.toml  README.md  config.toml  sb-service.json
.github/workflows/: release.yml
proto/tunnel/v1/: tunnel.proto
scripts/: install.ps1  install.sh
src/: config.rs  main.rs
src/engine/: mod.rs
src/modules/: fim.rs  firewall_auditor.rs  mod.rs  permission_auditor.rs  persistence_hunter.rs  port_scanner.rs  process_sentinel.rs  ssh_auditor.rs  ssl_auditor.rs  vuln_scanner.rs
src/output/: direct.rs  local_file.rs  mod.rs  sb_agent.rs
src/updater/: mod.rs
