[package]
name = "ferro-sentry"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "SecuryBlack server security agent (EDR + posture)"
repository = "https://github.com/securyblack/ferro-sentry"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1"
dirs = "5"
async-trait = "0.1"
hostname = "0.4"

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"

[profile.release]
opt-level = 3
lto = true
strip = true

